feat: add ProductPickerModal component for product selection in patient view
feat: enhance ViewPatient component with expandable sections for lens specifications and product recommendations

refactor: update prescription API to include lens specifications and recommendations

feat: implement loading prescription recommendations into the sales cart in ManageSales component

fix: add patient prescriptions query hook for fetching prescriptions in sales context

fix: improve dialog component to accept additional className prop for customization